# open_complex_emin

./: .gitignore  LICENSE  README.md  build_container.sh  environment.yml  protonator.def  pyproject.toml  setup.sh
debug/: LIG.params  temp_lig.sdf
examples/debug2/: temp_lig.sdf
protonator/: cli.py  cli_batch.py  cli_fast.py  fast.py  gaff.py  geometry.py  hbonds.py  initialize.py  ligand.py  ligand_h.py  minimize.py  protonate_h.py  sweep.py
protonator/data/: ideal_residue_h.json
scripts/: extract_ideal_geom.py  install_openff.sh  run_batch.py
tests/: test_cli.py  test_fast.py
