[project]
name = "protonator"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.0",
    "pip",
    "setuptools",
    "lxml>=5.0",
    "networkx>=3.0",
    "openmm>=8.5.1",
    "openmmforcefields>=0.15.1",
    "packaging>=23.0",
    "parmed>=4.0",
    "prody>=2.4",
    "pint>=0.23",
    "python-constraint>=1.4",
    "rdkit>=2024.3",
    "tblite>=0.6",
    "tinydb>=4.0",
    "typer>=0.12",
]

[tool.setuptools.packages.find]
include = ["protonator*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
protonator = "protonator.cli:app"
protonator_batch = "protonator.cli_batch:app"
